--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.0",
-    "next": "^13.3.1",
+    "next": "14.2.3",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.38",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-scroll-parallax": "^3.4.5",
     "sharp": "^0.33.4",
-    "tailwindcss": "^3.4.4"
+    "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
@@ -37,6 +36,8 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss-loader": "^8.1.1"
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.4"
   }
 }
