changes header in mobile and added some footer changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^2.1.0",
+    "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.15.17",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.17",
